fix dark mode in animations

--- a/src/Components/Animations/AnimatedText/AnimatedText.css
+++ b/src/Components/Animations/AnimatedText/AnimatedText.css
@@ -2,3 +2,12 @@
   font-size: 1rem;
   font-weight: bold;
 }
+
+.dark-mode {
+  color: #fafafa !important;
+  display: flex;
+  flex-direction: column;
+  line-height: 1.2;
+  font-weight: bold;
+  font-size: 4rem;
+}
